--- a/analysis/simulation_two_tissues_two_omics.Rmd
+++ b/analysis/simulation_two_tissues_two_omics.Rmd
@@ -19,6 +19,49 @@ source("/project/xinhe/shengqian/cTWAS_simulation/code/simulation_help_functions
 source("/project/xinhe/shengqian/cTWAS_simulation/code/summarize_basic_plots.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/code/summarize_ctwas_plots.R")
 
+plot_Prior <- function(results_dir, runtag, simutags, thin, group_prior_var_structure, null_method, file_name, prior_true) {
+  plots <- list()  # Store plots in a list
+  plot_idx <- 1
+  
+  for (simutag in names(simutags)) {
+    param_df_ctwas <- load_parameters(results_dir, runtag, simutags[[simutag]], thin, group_prior_var_structure, null_method, file_name)
+      
+    df <- data.frame(null_method = rep(c("blood E", "blood S", "heart E", "heart S"), each = 10),
+                       pos = c(rep(1, 10), rep(2, 10), rep(3, 10), rep(4, 10)),
+                       prior = c(param_df_ctwas$`prior_Whole_Blood|expression`, param_df_ctwas$`prior_Whole_Blood|splicing`,
+                               param_df_ctwas$`prior_Heart_Left_Ventricle|expression`,param_df_ctwas$`prior_Heart_Left_Ventricle|splicing`)) 
+      
+    df$pos <- jitter(df$pos, amount = 0.2)
+    
+    # Prepare hline data: start and end x for each group
+    hline_df <- data.frame(
+      pos = 1:length(prior_true[[simutag]]),
+      yintercept = unlist(prior_true[[simutag]])
+    )
+      
+    p <- ggplot(df, aes(x = pos, y = prior, group = null_method, color = null_method)) +
+        geom_point() +
+        geom_segment(data = hline_df,
+                 aes(x = pos - 0.3, xend = pos + 0.3, 
+                     y = yintercept, yend = yintercept),
+                 linetype = "dashed", inherit.aes = FALSE) +
+        labs(x = "", y = "Prior", title = simutag) +
+        scale_x_continuous(breaks = c(1, 2, 3, 4), labels = c("blood E", "blood S", "heart E", "heart S")) +
+        ylim(c(0,0.1)) +
+        theme_minimal()+
+        theme(legend.position = "none")
+      
+    plots[[plot_idx]] <- p  # Store plot in the list
+    plot_idx <- plot_idx + 1
+  }
+  
+  if (length(plots) > 1) {
+    grid.arrange(grobs = plots, ncol = length(plots))  # Using gridExtra
+  } else {
+    print(plots[[1]])
+  }
+}
+
 plot_enrichment <- function(results_dir, runtag, simutags, thin, group_prior_var_structure, null_method, file_name, enrichment_true) {
   plots <- list()  # Store plots in a list
   plot_idx <- 1
@@ -34,12 +77,21 @@ plot_enrichment <- function(results_dir, runtag, simutags, thin, group_prior_var
                               param_df_ctwas$`enrichment_se_Heart_Left_Ventricle|expression`,param_df_ctwas$`enrichment_se_Heart_Left_Ventricle|splicing`)) 
       
     df$pos <- jitter(df$pos, amount = 0.2)
+    
+    # Prepare hline data: start and end x for each group
+    hline_df <- data.frame(
+      pos = 1:length(enrichment_true[[simutag]]),
+      yintercept = unlist(enrichment_true[[simutag]])
+    )
       
     p <- ggplot(df, aes(x = pos, y = enrichment, group = null_method, color = null_method)) +
         geom_point() +
         geom_errorbar(aes(ymin = enrichment - 1.96 * se, ymax = enrichment + 1.96 * se), width = 0.01) +
-        geom_hline(yintercept = enrichment_true[[simutag]], linetype = "dashed", color = "blue") +
-        labs(x = "", y = "log(Enrichment)", title = paste0("Enrichment ",exp(enrichment_true[[simutag]]))) +
+        geom_segment(data = hline_df,
+                 aes(x = pos - 0.3, xend = pos + 0.3, 
+                     y = yintercept, yend = yintercept),
+                 linetype = "dashed", inherit.aes = FALSE) +
+        labs(x = "", y = "log(Enrichment)", title = simutag) +
         scale_x_continuous(breaks = c(1, 2, 3, 4), labels = c("blood E", "blood S", "heart E", "heart S")) +
         ylim(c(-5,5)) +
         theme_minimal()+
@@ -56,7 +108,7 @@ plot_enrichment <- function(results_dir, runtag, simutags, thin, group_prior_var
   }
 }
 
-plot_PVE <- function(results_dir, runtag, simutags, thin, group_prior_var_structure, null_method, file_name, enrichment_true) {
+plot_PVE <- function(results_dir, runtag, simutags, thin, group_prior_var_structure, null_method, file_name, PVE_true) {
   plots <- list()  # Store plots in a list
   plot_idx <- 1
   
@@ -65,16 +117,69 @@ plot_PVE <- function(results_dir, runtag, simutags, thin, group_prior_var_struct
       
     df <- data.frame(null_method = rep(c("blood E", "blood S", "heart E", "heart S"), each = 10),
                        pos = c(rep(1, 10), rep(2, 10), rep(3, 10), rep(4, 10)),
-                       enrichment = c(param_df_ctwas$`pve_Whole_Blood|expression`, param_df_ctwas$`pve_Whole_Blood|splicing`,
-                                      param_df_ctwas$`pve_Heart_Left_Ventricle|expression`,param_df_ctwas$`pve_Heart_Left_Ventricle|splicing`))
+                       pve = c(param_df_ctwas$`pve_Whole_Blood|expression`, param_df_ctwas$`pve_Whole_Blood|splicing`,
+                               param_df_ctwas$`pve_Heart_Left_Ventricle|expression`,param_df_ctwas$`pve_Heart_Left_Ventricle|splicing`)) 
       
     df$pos <- jitter(df$pos, amount = 0.2)
+    
+    # Prepare hline data: start and end x for each group
+    hline_df <- data.frame(
+      pos = 1:length(PVE_true[[simutag]]),
+      yintercept = unlist(PVE_true[[simutag]])
+    )
       
-    p <- ggplot(df, aes(x = pos, y = enrichment, group = null_method, color = null_method)) +
+    p <- ggplot(df, aes(x = pos, y = pve, group = null_method, color = null_method)) +
         geom_point() +
+        geom_segment(data = hline_df,
+                 aes(x = pos - 0.3, xend = pos + 0.3, 
+                     y = yintercept, yend = yintercept),
+                 linetype = "dashed", inherit.aes = FALSE) +
         labs(x = "", y = "PVE", title = simutag) +
         scale_x_continuous(breaks = c(1, 2, 3, 4), labels = c("blood E", "blood S", "heart E", "heart S")) +
-        #ylim(c(-5,5)) +
+        ylim(c(0,0.5)) +
+        theme_minimal()+
+        theme(legend.position = "none")
+      
+    plots[[plot_idx]] <- p  # Store plot in the list
+    plot_idx <- plot_idx + 1
+  }
+  
+  if (length(plots) > 1) {
+    grid.arrange(grobs = plots, ncol = length(plots))  # Using gridExtra
+  } else {
+    print(plots[[1]])
+  }
+}
+
+plot_PHE <- function(results_dir, runtag, simutags, thin, group_prior_var_structure, null_method, file_name, PHE_true) {
+  plots <- list()  # Store plots in a list
+  plot_idx <- 1
+  
+  for (simutag in names(simutags)) {
+    param_df_ctwas <- load_parameters(results_dir, runtag, simutags[[simutag]], thin, group_prior_var_structure, null_method, file_name)
+      
+    df <- data.frame(null_method = rep(c("blood E", "blood S", "heart E", "heart S"), each = 10),
+                       pos = c(rep(1, 10), rep(2, 10), rep(3, 10), rep(4, 10)),
+                       phe = c(param_df_ctwas$`prop_heritability_Whole_Blood|expression`, param_df_ctwas$`prop_heritability_Whole_Blood|splicing`,
+                               param_df_ctwas$`prop_heritability_Heart_Left_Ventricle|expression`,param_df_ctwas$`prop_heritability_Heart_Left_Ventricle|splicing`)) 
+      
+    df$pos <- jitter(df$pos, amount = 0.2)
+    
+    # Prepare hline data: start and end x for each group
+    hline_df <- data.frame(
+      pos = 1:length(PHE_true[[simutag]]),
+      yintercept = unlist(PHE_true[[simutag]])
+    )
+      
+    p <- ggplot(df, aes(x = pos, y = phe, group = null_method, color = null_method)) +
+        geom_point() +
+        geom_segment(data = hline_df,
+                 aes(x = pos - 0.3, xend = pos + 0.3, 
+                     y = yintercept, yend = yintercept),
+                 linetype = "dashed", inherit.aes = FALSE) +
+        labs(x = "", y = "PHE", title = simutag) +
+        scale_x_continuous(breaks = c(1, 2, 3, 4), labels = c("blood E", "blood S", "heart E", "heart S")) +
+        ylim(c(0,1)) +
         theme_minimal()+
         theme(legend.position = "none")
       
@@ -95,140 +200,81 @@ plot_PIP_shared_all_ctwas <- function(results_dir, runtag,  simutags, ...){
   f1 <- caliPIP_plot(phenofs, susieIfs, ...) 
   return(f1)
 }
-
-plot_PVE <- function(results_dir, runtag, simutags, thin, group_prior_var_structure, null_method, file_name, pve_data) {
-  plots <- list()
-  plot_idx <- 1
-  
-  for (simutag in names(simutags)) {
-    param_df_ctwas <- load_parameters(results_dir, runtag, simutags[[simutag]], thin, group_prior_var_structure, null_method, file_name)
-    
-    df <- data.frame(null_method = rep(c("blood E", "blood S", "heart E", "heart S"), each = 10),
-                     pos = c(rep(1, 10), rep(2, 10), rep(3, 10), rep(4, 10)),
-                     enrichment = c(param_df_ctwas$`pve_Whole_Blood|expression`, param_df_ctwas$`pve_Whole_Blood|splicing`,
-                                    param_df_ctwas$`pve_Heart_Left_Ventricle|expression`, param_df_ctwas$`pve_Heart_Left_Ventricle|splicing`))
-    
-    df$pos <- jitter(df$pos, amount = 0.2)
-    
-    # Extract true PVE values for current simutag
-    true_vals <- as.numeric(pve_data[simutag, ])
-    names(true_vals) <- c("blood E", "blood S", "heart E", "heart S")
-    
-    # Create data.frame for segment lines
-    seg_df <- data.frame(
-      x = c(0.7, 1.7, 2.7, 3.7),
-      xend = c(1.3, 2.3, 3.3, 4.3),
-      y = true_vals,
-      yend = true_vals
-    )
-    
-    p <- ggplot(df, aes(x = pos, y = enrichment, group = null_method, color = null_method)) +
-      geom_point() +
-      geom_segment(data = seg_df, aes(x = x, xend = xend, y = y, yend = yend),
-                   inherit.aes = FALSE, color = "black", linetype = "dashed") +
-      labs(x = "", y = "PVE", title = simutag) +
-      scale_x_continuous(breaks = c(1, 2, 3, 4), labels = c("blood E", "blood S", "heart E", "heart S")) +
-      theme_minimal() +
-      theme(legend.position = "none")
-    
-    plots[[plot_idx]] <- p
-    plot_idx <- plot_idx + 1
-  }
-  
-  if (length(plots) > 1) {
-    grid.arrange(grobs = plots, ncol = length(plots))
-  } else {
-    print(plots[[1]])
-  }
-}
-
-
 ```
-
-## Simulation Settings
-This is an one-tissue simulation to test the enrichment and PVE parameters. Expression traits are from whole blood There are five simulations with different enrichment parameters and each has 10 replicates. Gene and SNP variance are fixed to be the same.
-
-True PVE is calculated in two ways and compared. The first way is calculating PVE when simulating the phenotype. It is simply var.gene <- var(X.g %*% e.beta). The second way is calculating PVE using the per-SNP heribility formula in paper given prior inclusion probablity, group size and variance of effect size. 
 
 ## Simulation Parameters
 ```{r eval=FALSE}
-sigma_gene =  c(0.0155,   0.0155,   0.0155,    0.0155,    0.0155)
-pi_gene =     c(0.0025,   0.025,    0.05,      0.1,       0.2)
-size_gene =   c(8170,     8170,     8170,      8170,      8170)
+pve_gene <-   c(0.005,    0.05,     0.1,       0.2)
+pi_gene =     c(0.0025,   0.025,    0.05,      0.1)
+size_gene =   c(8170,     8170,     8170,      8170)
 
-sigma_snp =   c(0.0155,   0.0155,   0.0155,    0.0155,    0.0155)
-pi_snp =      c(0.0025,   0.0025,   0.0025,    0.0025,    0.0025)
-size_snp =    c(500000,   500000,   500000,    500000,    500000)
+pve_gene <-   c(0.008,    0.08,     0.16,       0.32)
+pi_gene =     c(0.0025,   0.025,    0.05,      0.1)
+size_gene =   c(13273,     13273,     13273,      13273)
+
+pve_snp <-    c(0.3,      0.3,      0.3,       0.3)
+pi_snp =      c(0.0025,   0.0025,   0.0025,    0.0025)
+size_snp =    c(500000,   500000,   500000,    500000)
 ```
 
 ```{r echo=FALSE}
 simutags <- list("enrichment 1"=paste(1, 1:10, sep = "-"),
                  "enrichment 10"=paste(2, 1:10, sep = "-"),
                  "enrichment 20"=paste(3, 1:10, sep = "-"),
-                 "enrichment 40"=paste(4, 1:10, sep = "-"),
-                 "enrichment 80"=paste(5, 1:10, sep = "-"))
+                 "enrichment 40"=paste(4, 1:10, sep = "-"))
 
-enrichment_true <- list("enrichment 1"=0,
-                        "enrichment 10"=log(10,base=exp(1)),
-                        "enrichment 20"=log(20,base=exp(1)),
-                        "enrichment 40"=log(40,base=exp(1)),
-                        "enrichment 80"=log(80,base=exp(1)))
+prior_true <- list("enrichment 1"=c(0.0025,0.0025,0,0),
+                   "enrichment 10"=c(0.005,0.005,0,0),
+                   "enrichment 20"=c(0.01,0.01,0,0),
+                   "enrichment 40"=c(0.02,0.02,0,0))
 
-pi <- c(0.0025,   0.025,    0.05,      0.1,       0.2)
-sigma_beta <- c(0.0155,   0.0155,   0.0155,    0.0155,    0.0155)
-gene_size <- 8170
-pve <- sigma_beta^2 * pi * gene_size
+enrichment_true <- list("enrichment 1"=c(0,0,0,0),
+                        "enrichment 10"=c(log(10,base=exp(1)),log(10,base=exp(1)),0,0),
+                        "enrichment 20"=c(log(20,base=exp(1)),log(20,base=exp(1)),0,0),
+                        "enrichment 40"=c(log(40,base=exp(1)),log(40,base=exp(1)),0,0))
 
-pve_true <- list("1"=pve[1],
-                 "2"=pve[2],
-                 "3"=pve[3],
-                 "4"=pve[4],
-                 "5"=pve[5])
+pve_true <- list("enrichment 1"=c(0.005,0.008,0,0),
+                 "enrichment 10"=c(0.05,0.08,0,0),
+                 "enrichment 20"=c(0.1,0.16,0,0),
+                 "enrichment 40"=c(0.2,0.32,0,0))
 
-pve_data <- c()
-for(i in names(simutags)){
-  tmp_pve <- c()
-  for(j in simutags[[i]]){
-    pve <- get(load(paste0("/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_enrichment/two_tissues_two_omics_simu",j,"-pheno.Rd")))
-    pve <- unlist(pve$param$pve.weight.truth)
-    tmp_pve <- rbind(tmp_pve,pve)
-  }
-  pve_data <- rbind(pve_data,colMeans(tmp_pve))
-}
-
-pve_data <- c()
-for(i in names(simutags)){
-  for(j in simutags[[i]]){
-    pve <- get(load(paste0("/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_enrichment/two_tissues_two_omics_simu",j,"-pheno.Rd")))
-    pve <- var(pve$Y)
-    pve_data <- c(pve_data,pve)
-  }
-}
-
-rownames(pve_data) <- names(simutags)
-
-pve_data <- list("1"=pve_data[1],
-                 "2"=pve_data[2],
-                 "3"=pve_data[3],
-                 "4"=pve_data[4],
-                 "5"=pve_data[5])
+phe_true <- list("enrichment 1"=c(0.01597444,0.02555911,0,0),
+                 "enrichment 10"=c(0.11627907,0.18604651,0,0),
+                 "enrichment 20"=c(0.17857143,0.28571429,0,0),
+                 "enrichment 40"=c(0.24390244,0.39024390,0,0))
 ```
 
 ## shared_all, ctwas null weight
+
+### Prior
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_enrichment/"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_PVE/"
 runtag = "two_tissues_two_omics"
-plot_enrichment(results_dir,runtag,simutags,1,"shared_type","ctwas",".Gtest.minp08.mingene1.parameters.RDS",enrichment_true)
+plot_Prior(results_dir,runtag,simutags,1,"shared_all","ctwas",".Gtest.minp08.mingene0.parameters.RDS",prior_true)
 ```
 
-## shared_all, ctwas null weight
+### Enrichment
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_enrichment/"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_PVE/"
 runtag = "two_tissues_two_omics"
-plot_PVE(results_dir,runtag,simutags,1,"shared_all","ctwas",".Gtest.minp08.mingene1.parameters.RDS",pve_data)
+plot_enrichment(results_dir,runtag,simutags,1,"shared_all","ctwas",".Gtest.minp08.mingene0.parameters.RDS",enrichment_true)
 ```
 
-```{r}
+## PVE
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_PVE/"
+runtag = "two_tissues_two_omics"
+plot_PVE(results_dir,runtag,simutags,1,"shared_all","ctwas",".Gtest.minp08.mingene0.parameters.RDS",pve_true)
+```
+
+## PHE
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_two_tissues_two_omics_PVE/"
+runtag = "two_tissues_two_omics"
+plot_PHE(results_dir,runtag,simutags,1,"shared_all","ctwas",".Gtest.minp08.mingene1.parameters.RDS",phe_true)
+```
+
+```{r echo=FALSE}
 plot_molecular_PIPs <- function(results_dir, runtag,  simutags, group_prior_var_structure, null_method, ...){
   phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
   susieIfs <- paste0(results_dir, runtag, "_simu",simutags, ".thin1.",group_prior_var_structure,".",null_method,".Gtest.minp08.mingene1.estimated_parameter.finemap_regions_res.RDS")
@@ -281,93 +327,3 @@ do.call(grid.arrange, c(gene_PIPs, ncol = 5))
 
 
 
-```{r}
-library(parallel)
-library(gridExtra)
-
-mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
-simutags <- list("enrichment 1" = paste(1, 1:10, sep = "-"),
-                 "enrichment 10" = paste(2, 1:10, sep = "-"),
-                 "enrichment 20" = paste(3, 1:10, sep = "-"),
-                 "enrichment 40" = paste(4, 1:10, sep = "-"),
-                 "enrichment 80" = paste(5, 1:10, sep = "-"))
-
-# Set up parallel cluster
-n_cores <- detectCores() - 1
-cl <- makeCluster(n_cores)
-clusterExport(cl, c("results_dir", "runtag", "simutags", "mapping_table", "plot_gene_PIPs"))
-clusterEvalQ(cl, library(ggplot2))  # if needed
-
-# Run in parallel
-gene_PIPs_list <- parLapply(cl, names(simutags), function(i) {
-  plot_gene_PIPs(results_dir, runtag, simutags[[i]], "shared_all", "susie", mapping_table, main = i)
-})
-names(gene_PIPs_list) <- names(simutags)
-
-stopCluster(cl)
-
-# Display plots
-do.call(grid.arrange, c(gene_PIPs_list, ncol = 5))
-```
-
-### PVE calculated with the per-SNP heritability formula
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_all","ctwas",".Gtest.minp08.mingene1.parameters.RDS",pve_true)
-```
-
-### PVE calculated from simulated data var.gene <- var(X.g %*% e.beta)
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_all","ctwas",".Gtest.minp08.mingene1.parameters.RDS",pve_data)
-```
-
-## shared_type, ctwas null weight
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
-runtag = "one_tissue"
-plot_enrichment(results_dir,runtag,simutags,"shared_type","ctwas",".Gtest.minp08.mingene1.parameters.RDS",enrichment_true)
-```
-
-### PVE calculated with the per-SNP heritability formula
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_type","ctwas",".Gtest.minp08.mingene1.parameters.RDS",pve_true)
-```
-
-### PVE calculated from simulated data var.gene <- var(X.g %*% e.beta)
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_type","ctwas",".Gtest.minp08.mingene1.parameters.RDS",pve_data)
-```
-
-
-## shared_all, susie null weight
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
-runtag = "one_tissue"
-plot_enrichment(results_dir,runtag,simutags,"shared_all","susie",".Gtest.minp08.mingene1.parameters.RDS",enrichment_true)
-```
-
-### PVE calculated with the per-SNP heritability formula
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_all","susie",".Gtest.minp08.mingene1.parameters.RDS",pve_true)
-```
-
-### PVE calculated from simulated data var.gene <- var(X.g %*% e.beta)
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_all","susie",".Gtest.minp08.mingene1.parameters.RDS",pve_data)
-```
-
-## shared_type, susie null weight
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
-runtag = "one_tissue"
-plot_enrichment(results_dir,runtag,simutags,"shared_type","susie",".Gtest.minp08.mingene1.parameters.RDS",enrichment_true)
-```
-
-### PVE calculated with the per-SNP heritability formula
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_type","susie",".Gtest.minp08.mingene1.parameters.RDS",pve_true)
-```
-
-### PVE calculated from simulated data var.gene <- var(X.g %*% e.beta)
-```{r echo=FALSE}
-plot_PVE(results_dir,runtag,simutags,"shared_type","susie",".Gtest.minp08.mingene1.parameters.RDS",pve_data)
-```
