--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -40,6 +40,7 @@ editor_options:
   * [Simulation one tissue no enrichment](simulation_one_tissue_no_enrichment.html)
   * [Simulation one tissue enrichment](simulation_one_tissue_enrichment.html)
   * [Simulation two tissues no enrichment](simulation_two_tissues_no_enrichment.html)
+  * [Simulation two tissues two omics enrichment](simulation_two_tissues_two_omics.html)
   * [Simulation no enrichment four tissues combined](simulation_no_enrichment_four_tissues_combined.html)
   * [Simulation pip calibration](simulation_pip_calibration.html)
   
