--- a/analysis/simulation_two_tissues_two_omics.Rmd
+++ b/analysis/simulation_two_tissues_two_omics.Rmd
@@ -284,7 +284,7 @@ plot_PHE(results_dir,runtag,simutags,1,"shared_all","ctwas",".Gtest.minp08.minge
 ```
 
 ### Molecular level PIP
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=16, fig.height=4}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=16, fig.height=4}
 simutags <- list("enrichment 1"=  paste(1, 1:10, sep = "-"),
                  "enrichment 10"= paste(2, 1:10, sep = "-"),
                  "enrichment 20"= paste(3, 1:10, sep = "-"),
@@ -299,7 +299,7 @@ do.call(grid.arrange, c(molecular_PIPs, ncol = 4))
 ```
 
 ### Gene level PIP
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=16, fig.height=4}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=16, fig.height=4}
 mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
 simutags <- list("enrichment 1"=  paste(1, 1:10, sep = "-"),
                  "enrichment 10"= paste(2, 1:10, sep = "-"),
@@ -345,7 +345,7 @@ plot_PHE(results_dir,runtag,simutags,1,"shared_all","susie",".Gtest.minp08.minge
 ```
 
 ### Molecular level PIP
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=16, fig.height=4}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=16, fig.height=4}
 simutags <- list("enrichment 1"=  paste(1, 1:10, sep = "-"),
                  "enrichment 10"= paste(2, 1:10, sep = "-"),
                  "enrichment 20"= paste(3, 1:10, sep = "-"),
@@ -360,7 +360,7 @@ do.call(grid.arrange, c(molecular_PIPs, ncol = 4))
 ```
 
 ### Gene level PIP
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=16, fig.height=4}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=16, fig.height=4}
 mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
 simutags <- list("enrichment 1"=  paste(1, 1:10, sep = "-"),
                  "enrichment 10"= paste(2, 1:10, sep = "-"),
