--- a/analysis/simulation_two_tissues_two_omics.Rmd
+++ b/analysis/simulation_two_tissues_two_omics.Rmd
@@ -292,7 +292,7 @@ simutags <- list("enrichment 1"=  paste(1, 1:10, sep = "-"),
 molecular_PIPs <- list()
 for(i in names(simutags)){
   print(i)
-  f1 <- plot_molecular_PIPs(results_dir, runtag, simutags[[i]], "shared_all", "susie", main = i)
+  f1 <- plot_molecular_PIPs(results_dir, runtag, simutags[[i]], "shared_all", "ctwas", main = i)
   molecular_PIPs[[i]] <- f1
 }
 do.call(grid.arrange, c(molecular_PIPs, ncol = 4))
@@ -308,7 +308,7 @@ simutags <- list("enrichment 1"=  paste(1, 1:10, sep = "-"),
 gene_PIPs <- list()
 for(i in names(simutags)){
   print(i)
-  f1 <- plot_gene_PIPs(results_dir, runtag, simutags[[i]], "shared_all", "susie", mapping_table, main = i)
+  f1 <- plot_gene_PIPs(results_dir, runtag, simutags[[i]], "shared_all", "ctwas", mapping_table, main = i)
   gene_PIPs[[i]] <- f1
 }
 do.call(grid.arrange, c(gene_PIPs, ncol = 4))
