--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -39,6 +39,7 @@ editor_options:
   * [Simulation no enrichment](simulation_no_enrichment.html)
   * [Simulation one tissue no enrichment](simulation_one_tissue_no_enrichment.html)
   * [Simulation one tissue enrichment](simulation_one_tissue_enrichment.html)
+  * [Simulation one tissue three omics](simulation_one_tissues_three_omics.html)
   * [Simulation two tissues no enrichment](simulation_two_tissues_no_enrichment.html)
   * [Simulation two tissues two omics enrichment](simulation_two_tissues_two_omics.html)
   * [Simulation no enrichment four tissues combined](simulation_no_enrichment_four_tissues_combined.html)
